--- a/login-page.html
+++ b/login-page.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Tabs Login</title>
     <link rel="stylesheet" href="style2.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <style>
+        body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+        }
+
+        .video-backgound {
+         position: fixed; 
+         top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover; 
+          z-index: -1; 
+          filter: brightness(50%);
+        }
+    </style>
 
 </head>
 <body>
