--- a/login-page.html
+++ b/login-page.html
@@ -13,7 +13,7 @@
       height: 100%;
         }
 
-        .video-backgound {
+        .video-background {
          position: fixed; 
          top: 0;
           left: 0;
