--- a/login-page.html
+++ b/login-page.html
@@ -40,7 +40,7 @@
 
 
     <video autoplay muted loop id="video-background">
-        <source src="/img/videoplayback (online-video-cutter.com).mp4" type="video/mp4">
+        <source src="img/videoplayback (online-video-cutter.com).mp4" type="video/mp4">
       </video>
 
     <main class="container">
